More comments. Updated PlaytimeEvent to store spawn point information, and began writing setspawn command; command should work for location-based spawn points.

--- a/plugin.yml
+++ b/plugin.yml
@@ -13,6 +13,6 @@ commands:
       usage: /event create [name]
       permission: playtime.admins
    end:
-      description: ends an event with the supply name; also removes all subscriptions
+      description: ends an event with the supply name; also removes all subscriptions to that event
       usage: /event end [name]
       permission: playtime.admins
