PlaytimeEvent altered to store player's original Location when subscribing, rather than Player. Work on setspawn. forceSubscribe written as part of subscribe, instead.

--- a/plugin.yml
+++ b/plugin.yml
@@ -16,3 +16,4 @@ commands:
       description: ends an event with the supply name; also removes all subscriptions to that event
       usage: /event end [name]
       permission: playtime.admins
+   subscribe
