--- a/plugin.yml
+++ b/plugin.yml
@@ -4,16 +4,30 @@ version: 0.1
 author: Feldherren
 
 permissions:
-   playtime.admins:
-      description: Allows user to create and end events, and set event spawn locations.
+  playtime.admins:
+    description: Allows user to create and end events, and set event spawn locations.
 
 commands:
-   create:
-      description: creates an event with the supplied name
-      usage: /event create [name]
-      permission: playtime.admins
-   end:
-      description: ends an event with the supply name; also removes all subscriptions to that event
-      usage: /event end [name]
-      permission: playtime.admins
-   subscribe
+  create:
+    description: creates an event with the supplied name
+    usage: /event create [name]
+    permission: playtime.admins
+    permission-message: You don't have permission to create events.
+  end:
+    description: ends an event with the supply name; also removes all subscriptions to that event
+    usage: /event end [event]
+    permission: playtime.admins
+    permission-message: You don't have permission to end events.
+  setspawn:
+    description: sets the event respawn point, replacing any current point set for the event
+    usage: /event setspawn [event]
+    permission-message: You don't have permission to set event spawn locations.
+  subscribe:
+    description: subscribes yourself or another person to an event
+    usage: /event subscribe [event]
+  unsubscribe:
+    description: unsubscribes yourself or another person from an event
+    usage: /event unsubscribe
+  list:
+    description: lists events currently in progress
+    usage: /event end [name]
